--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "postinstall": "node common/validate.js",
     "test": "mocha"
   },
   "files": [
@@ -51,10 +52,5 @@
   },
   "devDependencies": {
     "mocha": "*"
-  },
-  "peerDependencies": {
-    "yo": ">=1.0.0",
-    "bower": "*",
-    "cordova": ">=3.0.0"
   }
 }
